Context-path changed

--- a/EmployeeWeb/src/main/resources/application.properties
+++ b/EmployeeWeb/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-server.port=9090
+server.port=8080
 server.servlet.context-path=/MyApp
 
 #Logging
 #logging.level.root=debug
+logging.level.com.rit.boot=trace
