--- a/EmployeeWeb/pom.xml
+++ b/EmployeeWeb/pom.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.2.1</version>
-		<relativePath/> 
+		<relativePath />
 	</parent>
 	<groupId>com.rit.boot</groupId>
-	<artifactId>LoggingWebDemo</artifactId>
+	<artifactId>EmployeeWeb</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>LoggingWebDemo</name>
+	<name>EmployeeWeb</name>
 	<description>Practice Logging, Controller, </description>
 	<properties>
 		<java.version>17</java.version>
@@ -27,6 +28,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
