configured monitoring and info

--- a/EmployeeWeb/src/main/resources/application.properties
+++ b/EmployeeWeb/src/main/resources/application.properties
@@ -4,3 +4,11 @@ server.servlet.context-path=/MyApp
 #Logging
 #logging.level.root=debug
 logging.level.com.rit.boot=trace
+
+#enabling endpoins and configring them as required for Monitoring and managing the application
+management.endpoint.health.enabled=true
+management.endpoint.health.show-details=always
+management.endpoint.info.enabled=true
+
+management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.exclude=configprops
