Added details to info endpoint for monitoring

--- a/EmployeeWeb/src/main/resources/application.properties
+++ b/EmployeeWeb/src/main/resources/application.properties
@@ -12,3 +12,9 @@ management.endpoint.info.enabled=true
 
 management.endpoints.web.exposure.include=*
 management.endpoints.web.exposure.exclude=configprops
+
+#Providing more info about the project
+management.info.env.enabled=true
+info.app.name="EmployeeWeb"
+info.app.topic="RestAPI, Logging, Monitoring, etc"
+info.app.description="This app is built for learing purpose..."
