Context path added.

--- a/BookRestCrudDB/src/main/resources/application.properties
+++ b/BookRestCrudDB/src/main/resources/application.properties
@@ -1,7 +1,15 @@
-spring.datasource.name=test
+# DataSource name (its not a databse/user name)
+spring.datasource.name=MyDataSource
+
+# Database properties 
 spring.datasource.url=jdbc:mysql://localhost:3306/springboot
 spring.datasource.username=root
 spring.datasource.password=Root@123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+# To Automatically create table if not created or to update rows changes DDL
 spring.jpa.hibernate.ddl-auto=update
+
+# To set a Context-path 
+server.servlet.context-path=/mylibrary
