chenged logging level for userdefined package.

--- a/BookRestCrudDB/src/main/resources/application.properties
+++ b/BookRestCrudDB/src/main/resources/application.properties
@@ -13,3 +13,6 @@ spring.jpa.hibernate.ddl-auto=update
 
 # To set a Context-path 
 server.servlet.context-path=/mylibrary
+
+# To change Logging level to DEBUG for user-defined classes 
+logging.level.com.ritesh.boot=DEBUG
